# NPSC

./: CMakeLists.txt  CMakeListsTest.txt  README.md  activation.hpp  classify  classify.cpp  conv_fc_layer.cpp  conv_fc_layer.hpp  conv_layer_unoptimised.cpp  conv_layer_unoptimised.hpp  conv_max_pool.cpp  conv_max_pool.hpp  conv_neural_network_main.cpp  conv_neural_network_unoptimised.cpp  encoder.cpp  encoder.hpp  functions  functions.cpp  functions.hpp  image_processing.cpp  initialiser.hpp  main.cpp  mnist.cpp  mnist.hpp  mnist2.cpp  mnist2.hpp  multi_image_processing.cpp  multi_numbers_processing.cpp  multi_numbers_processing.hpp  multi_numbers_processing_copy.cpp  neural_network.cpp  neural_network.hpp  neural_network2.cpp  neural_network2.hpp  neural_network3.cpp  neural_network4.cpp  neural_network4.hpp  neural_network_conv_FAIL.cpp  neural_network_conv_unoptimised.cpp  neural_network_copy1 copy.cpp  (+12 more)
build_win/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include_cnn/: conv_function.hpp  conv_max_pool.hpp  mnist2.hpp  multi_numbers_processing.hpp
include_nn/: encoder.hpp  layer.hpp  mnist2.hpp
opencv4/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_config.cmake  version_string.tmp
opencv4/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/apps/model-diagnostics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/apps/visualisation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/lib/: libopencv_calib3d.so.4.9.0  libopencv_features2d.so.4.9.0  libopencv_flann.so.4.9.0  libopencv_highgui.so.4.9.0  libopencv_imgcodecs.so.4.9.0  libopencv_ml.so.4.9.0  libopencv_objdetect.so.4.9.0  libopencv_photo.so.4.9.0  libopencv_stitching.so.4.9.0  libopencv_video.so.4.9.0  libopencv_videoio.so.4.9.0
opencv4/modules/.firstpass/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/.firstpass/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/.firstpass/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/.firstpass/flann/: Makefile  (+2 more)
opencv4/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.avx2.cpp  undistort.simd_declarations.hpp
opencv4/modules/core/: CTestTestfile.cmake  Makefile  arithm.simd_declarations.hpp  arithm.sse2.cpp  cmake_install.cmake  convert.simd_declarations.hpp  convert.vsx3.cpp  convert_scale.lasx.cpp  convert_scale.simd_declarations.hpp  count_non_zero.lasx.cpp  count_non_zero.simd_declarations.hpp  has_non_zero.simd_declarations.hpp  has_non_zero.sse2.cpp  mathfuncs_core.avx.cpp  mathfuncs_core.simd_declarations.hpp  matmul.simd_declarations.hpp  matmul.sse2.cpp  mean.lasx.cpp  mean.simd_declarations.hpp  merge.simd_declarations.hpp  merge.sse2.cpp  split.simd_declarations.hpp  split.sse2.cpp  stat.simd_declarations.hpp  stat.sse4_2.cpp  sum.lasx.cpp  sum.simd_declarations.hpp
opencv4/modules/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sift.avx2.cpp  sift.simd_declarations.hpp
opencv4/modules/flann/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/gapi/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/highgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/imgcodecs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.avx2.cpp  accum.simd_declarations.hpp  bilateral_filter.avx2.cpp  bilateral_filter.simd_declarations.hpp  box_filter.avx2.cpp  box_filter.simd_declarations.hpp  cmake_install.cmake  color_hsv.simd_declarations.hpp  color_hsv.sse2.cpp  color_rgb.simd_declarations.hpp  color_rgb.sse4_1.cpp  color_yuv.simd_declarations.hpp  color_yuv.sse2.cpp  filter.simd_declarations.hpp  filter.sse4_1.cpp  median_blur.simd_declarations.hpp  median_blur.sse4_1.cpp  morph.simd_declarations.hpp  morph.sse2.cpp  smooth.avx2.cpp  smooth.simd_declarations.hpp  sumpixels.simd_declarations.hpp  sumpixels.sse2.cpp
opencv4/modules/java_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gen_java.json
opencv4/modules/js_bindings_generator/: CTestTestfile.cmake  Makefile  headers.txt
opencv4/modules/ml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/objc_bindings_generator/: CTestTestfile.cmake  Makefile  gen_objc.json
opencv4/modules/objdetect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/photo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/python_bindings_generator/: CTestTestfile.cmake  Makefile  headers.txt  pyopencv_custom_headers.h
opencv4/modules/python_tests/: CTestTestfile.cmake  Makefile
opencv4/modules/stitching/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/ts/: CTestTestfile.cmake  Makefile
opencv4/modules/video/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/modules/videoio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv4/python_loader/cv2/: config.py
presentation/: Presentation.pptx
src_cnn_experimental/: CMakeLists.txt  conv_function.cpp  conv_layer_unoptimised.cpp  conv_main_run.cpp  conv_main_test.cpp  conv_main_train.cpp  conv_max_pool.cpp  multi_numbers_processing.cpp
src_nn/: CMakeLists.txt  activation.cpp  image_processing.cpp  initialiser.cpp  layer.cpp  main.cpp
(+93 files in other folders)
