cmake_minimum_required(VERSION 3.0)
project(cnn)

set(EIGEN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../eigen-3.4.0)
set(LIB_PATH C:/lib/install/opencv/x64/vc17/staticlib)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MT")
include_directories(C:/lib/install/opencv/include)
include_directories(${EIGEN_DIR})
include_directories(../include_cnn)
set(BUILD_SHARED_LIBS OFF)

if(WIN32)
    add_definitions(-DWINVER=0x0601)
    add_definitions(-D_WIN32_WINNT=0x0601)
    set(CMAKE_SYSTEM_VERSION 8.1)
endif()

# Build Test CNN
add_executable(test multi_numbers_processing.cpp encoder.cpp mnist2.cpp conv_layer_unoptimised.cpp conv_max_pool.cpp conv_fc_layer.cpp conv_function.cpp conv_main_test.cpp)
# Build Run CNN
add_executable(run multi_numbers_processing.cpp encoder.cpp mnist2.cpp conv_layer_unoptimised.cpp conv_max_pool.cpp conv_fc_layer.cpp conv_function.cpp conv_main_run.cpp)
# Build Train CNN
add_executable(train multi_numbers_processing.cpp encoder.cpp mnist2.cpp conv_layer_unoptimised.cpp conv_max_pool.cpp conv_fc_layer.cpp conv_function.cpp conv_main_train.cpp)

target_compile_options(test PRIVATE /MT)
# Link against OpenCV libraries
target_link_libraries(test PRIVATE
${LIB_PATH}/ade.lib
${LIB_PATH}/aded.lib
${LIB_PATH}/IlmImf.lib
${LIB_PATH}/IlmImfd.lib
${LIB_PATH}/ippicvmt.lib
${LIB_PATH}/ippiw.lib
${LIB_PATH}/ippiwd.lib
${LIB_PATH}/ittnotify.lib
${LIB_PATH}/ittnotifyd.lib
${LIB_PATH}/libjpeg-turbo.lib
${LIB_PATH}/libjpeg-turbod.lib
${LIB_PATH}/libopenjp2.lib
${LIB_PATH}/libopenjp2d.lib
${LIB_PATH}/libpng.lib
${LIB_PATH}/libpngd.lib
${LIB_PATH}/libprotobuf.lib
${LIB_PATH}/libprotobufd.lib
${LIB_PATH}/libtiff.lib
${LIB_PATH}/libtiffd.lib
${LIB_PATH}/libwebp.lib
${LIB_PATH}/libwebpd.lib
${LIB_PATH}/opencv_aruco490.lib
${LIB_PATH}/opencv_aruco490d.lib
${LIB_PATH}/opencv_bgsegm490.lib
${LIB_PATH}/opencv_bgsegm490d.lib
${LIB_PATH}/opencv_bioinspired490.lib
${LIB_PATH}/opencv_bioinspired490d.lib
${LIB_PATH}/opencv_calib3d490.lib
${LIB_PATH}/opencv_calib3d490d.lib
${LIB_PATH}/opencv_ccalib490.lib
${LIB_PATH}/opencv_ccalib490d.lib
${LIB_PATH}/opencv_core490.lib
${LIB_PATH}/opencv_core490d.lib
${LIB_PATH}/opencv_datasets490.lib
${LIB_PATH}/opencv_datasets490d.lib
${LIB_PATH}/opencv_dnn490.lib
${LIB_PATH}/opencv_dnn490d.lib
${LIB_PATH}/opencv_dnn_objdetect490.lib
${LIB_PATH}/opencv_dnn_objdetect490d.lib
${LIB_PATH}/opencv_dnn_superres490.lib
${LIB_PATH}/opencv_dnn_superres490d.lib
${LIB_PATH}/opencv_dpm490.lib
${LIB_PATH}/opencv_dpm490d.lib
${LIB_PATH}/opencv_face490.lib
${LIB_PATH}/opencv_face490d.lib
${LIB_PATH}/opencv_features2d490.lib
${LIB_PATH}/opencv_features2d490d.lib
${LIB_PATH}/opencv_flann490.lib
${LIB_PATH}/opencv_flann490d.lib
${LIB_PATH}/opencv_fuzzy490.lib
${LIB_PATH}/opencv_fuzzy490d.lib
${LIB_PATH}/opencv_gapi490.lib
${LIB_PATH}/opencv_gapi490d.lib
${LIB_PATH}/opencv_hfs490.lib
${LIB_PATH}/opencv_hfs490d.lib
${LIB_PATH}/opencv_highgui490.lib
${LIB_PATH}/opencv_highgui490d.lib
${LIB_PATH}/opencv_imgcodecs490.lib
${LIB_PATH}/opencv_imgcodecs490d.lib
${LIB_PATH}/opencv_imgproc490.lib
${LIB_PATH}/opencv_imgproc490d.lib
${LIB_PATH}/opencv_img_hash490.lib
${LIB_PATH}/opencv_img_hash490d.lib
${LIB_PATH}/opencv_intensity_transform490.lib
${LIB_PATH}/opencv_intensity_transform490d.lib
${LIB_PATH}/opencv_line_descriptor490.lib
${LIB_PATH}/opencv_line_descriptor490d.lib
${LIB_PATH}/opencv_mcc490.lib
${LIB_PATH}/opencv_mcc490d.lib
${LIB_PATH}/opencv_ml490.lib
${LIB_PATH}/opencv_ml490d.lib
${LIB_PATH}/opencv_objdetect490.lib
${LIB_PATH}/opencv_objdetect490d.lib
${LIB_PATH}/opencv_optflow490.lib
${LIB_PATH}/opencv_optflow490d.lib
${LIB_PATH}/opencv_phase_unwrapping490.lib
${LIB_PATH}/opencv_phase_unwrapping490d.lib
${LIB_PATH}/opencv_photo490.lib
${LIB_PATH}/opencv_photo490d.lib
${LIB_PATH}/opencv_plot490.lib
${LIB_PATH}/opencv_plot490d.lib
${LIB_PATH}/opencv_quality490.lib
${LIB_PATH}/opencv_quality490d.lib
${LIB_PATH}/opencv_rapid490.lib
${LIB_PATH}/opencv_rapid490d.lib
${LIB_PATH}/opencv_reg490.lib
${LIB_PATH}/opencv_reg490d.lib
${LIB_PATH}/opencv_rgbd490.lib
${LIB_PATH}/opencv_rgbd490d.lib
${LIB_PATH}/opencv_saliency490.lib
${LIB_PATH}/opencv_saliency490d.lib
${LIB_PATH}/opencv_shape490.lib
${LIB_PATH}/opencv_shape490d.lib
${LIB_PATH}/opencv_signal490.lib
${LIB_PATH}/opencv_signal490d.lib
${LIB_PATH}/opencv_stereo490.lib
${LIB_PATH}/opencv_stereo490d.lib
${LIB_PATH}/opencv_stitching490.lib
${LIB_PATH}/opencv_stitching490d.lib
${LIB_PATH}/opencv_structured_light490.lib
${LIB_PATH}/opencv_structured_light490d.lib
${LIB_PATH}/opencv_superres490.lib
${LIB_PATH}/opencv_superres490d.lib
${LIB_PATH}/opencv_surface_matching490.lib
${LIB_PATH}/opencv_surface_matching490d.lib
${LIB_PATH}/opencv_text490.lib
${LIB_PATH}/opencv_text490d.lib
${LIB_PATH}/opencv_tracking490.lib
${LIB_PATH}/opencv_tracking490d.lib
${LIB_PATH}/opencv_video490.lib
${LIB_PATH}/opencv_video490d.lib
${LIB_PATH}/opencv_videoio490.lib
${LIB_PATH}/opencv_videoio490d.lib
${LIB_PATH}/opencv_videostab490.lib
${LIB_PATH}/opencv_videostab490d.lib
${LIB_PATH}/opencv_wechat_qrcode490.lib
${LIB_PATH}/opencv_wechat_qrcode490d.lib
${LIB_PATH}/opencv_xfeatures2d490.lib
${LIB_PATH}/opencv_xfeatures2d490d.lib
${LIB_PATH}/opencv_ximgproc490.lib
${LIB_PATH}/opencv_ximgproc490d.lib
${LIB_PATH}/opencv_xobjdetect490.lib
${LIB_PATH}/opencv_xobjdetect490d.lib
${LIB_PATH}/opencv_xphoto490.lib
${LIB_PATH}/opencv_xphoto490d.lib
${LIB_PATH}/zlib.lib
${LIB_PATH}/zlibd.lib)

target_compile_options(run PRIVATE /MT)
# Link against OpenCV libraries
target_link_libraries(run PRIVATE
${LIB_PATH}/ade.lib
${LIB_PATH}/aded.lib
${LIB_PATH}/IlmImf.lib
${LIB_PATH}/IlmImfd.lib
${LIB_PATH}/ippicvmt.lib
${LIB_PATH}/ippiw.lib
${LIB_PATH}/ippiwd.lib
${LIB_PATH}/ittnotify.lib
${LIB_PATH}/ittnotifyd.lib
${LIB_PATH}/libjpeg-turbo.lib
${LIB_PATH}/libjpeg-turbod.lib
${LIB_PATH}/libopenjp2.lib
${LIB_PATH}/libopenjp2d.lib
${LIB_PATH}/libpng.lib
${LIB_PATH}/libpngd.lib
${LIB_PATH}/libprotobuf.lib
${LIB_PATH}/libprotobufd.lib
${LIB_PATH}/libtiff.lib
${LIB_PATH}/libtiffd.lib
${LIB_PATH}/libwebp.lib
${LIB_PATH}/libwebpd.lib
${LIB_PATH}/opencv_aruco490.lib
${LIB_PATH}/opencv_aruco490d.lib
${LIB_PATH}/opencv_bgsegm490.lib
${LIB_PATH}/opencv_bgsegm490d.lib
${LIB_PATH}/opencv_bioinspired490.lib
${LIB_PATH}/opencv_bioinspired490d.lib
${LIB_PATH}/opencv_calib3d490.lib
${LIB_PATH}/opencv_calib3d490d.lib
${LIB_PATH}/opencv_ccalib490.lib
${LIB_PATH}/opencv_ccalib490d.lib
${LIB_PATH}/opencv_core490.lib
${LIB_PATH}/opencv_core490d.lib
${LIB_PATH}/opencv_datasets490.lib
${LIB_PATH}/opencv_datasets490d.lib
${LIB_PATH}/opencv_dnn490.lib
${LIB_PATH}/opencv_dnn490d.lib
${LIB_PATH}/opencv_dnn_objdetect490.lib
${LIB_PATH}/opencv_dnn_objdetect490d.lib
${LIB_PATH}/opencv_dnn_superres490.lib
${LIB_PATH}/opencv_dnn_superres490d.lib
${LIB_PATH}/opencv_dpm490.lib
${LIB_PATH}/opencv_dpm490d.lib
${LIB_PATH}/opencv_face490.lib
${LIB_PATH}/opencv_face490d.lib
${LIB_PATH}/opencv_features2d490.lib
${LIB_PATH}/opencv_features2d490d.lib
${LIB_PATH}/opencv_flann490.lib
${LIB_PATH}/opencv_flann490d.lib
${LIB_PATH}/opencv_fuzzy490.lib
${LIB_PATH}/opencv_fuzzy490d.lib
${LIB_PATH}/opencv_gapi490.lib
${LIB_PATH}/opencv_gapi490d.lib
${LIB_PATH}/opencv_hfs490.lib
${LIB_PATH}/opencv_hfs490d.lib
${LIB_PATH}/opencv_highgui490.lib
${LIB_PATH}/opencv_highgui490d.lib
${LIB_PATH}/opencv_imgcodecs490.lib
${LIB_PATH}/opencv_imgcodecs490d.lib
${LIB_PATH}/opencv_imgproc490.lib
${LIB_PATH}/opencv_imgproc490d.lib
${LIB_PATH}/opencv_img_hash490.lib
${LIB_PATH}/opencv_img_hash490d.lib
${LIB_PATH}/opencv_intensity_transform490.lib
${LIB_PATH}/opencv_intensity_transform490d.lib
${LIB_PATH}/opencv_line_descriptor490.lib
${LIB_PATH}/opencv_line_descriptor490d.lib
${LIB_PATH}/opencv_mcc490.lib
${LIB_PATH}/opencv_mcc490d.lib
${LIB_PATH}/opencv_ml490.lib
${LIB_PATH}/opencv_ml490d.lib
${LIB_PATH}/opencv_objdetect490.lib
${LIB_PATH}/opencv_objdetect490d.lib
${LIB_PATH}/opencv_optflow490.lib
${LIB_PATH}/opencv_optflow490d.lib
${LIB_PATH}/opencv_phase_unwrapping490.lib
${LIB_PATH}/opencv_phase_unwrapping490d.lib
${LIB_PATH}/opencv_photo490.lib
${LIB_PATH}/opencv_photo490d.lib
${LIB_PATH}/opencv_plot490.lib
${LIB_PATH}/opencv_plot490d.lib
${LIB_PATH}/opencv_quality490.lib
${LIB_PATH}/opencv_quality490d.lib
${LIB_PATH}/opencv_rapid490.lib
${LIB_PATH}/opencv_rapid490d.lib
${LIB_PATH}/opencv_reg490.lib
${LIB_PATH}/opencv_reg490d.lib
${LIB_PATH}/opencv_rgbd490.lib
${LIB_PATH}/opencv_rgbd490d.lib
${LIB_PATH}/opencv_saliency490.lib
${LIB_PATH}/opencv_saliency490d.lib
${LIB_PATH}/opencv_shape490.lib
${LIB_PATH}/opencv_shape490d.lib
${LIB_PATH}/opencv_signal490.lib
${LIB_PATH}/opencv_signal490d.lib
${LIB_PATH}/opencv_stereo490.lib
${LIB_PATH}/opencv_stereo490d.lib
${LIB_PATH}/opencv_stitching490.lib
${LIB_PATH}/opencv_stitching490d.lib
${LIB_PATH}/opencv_structured_light490.lib
${LIB_PATH}/opencv_structured_light490d.lib
${LIB_PATH}/opencv_superres490.lib
${LIB_PATH}/opencv_superres490d.lib
${LIB_PATH}/opencv_surface_matching490.lib
${LIB_PATH}/opencv_surface_matching490d.lib
${LIB_PATH}/opencv_text490.lib
${LIB_PATH}/opencv_text490d.lib
${LIB_PATH}/opencv_tracking490.lib
${LIB_PATH}/opencv_tracking490d.lib
${LIB_PATH}/opencv_video490.lib
${LIB_PATH}/opencv_video490d.lib
${LIB_PATH}/opencv_videoio490.lib
${LIB_PATH}/opencv_videoio490d.lib
${LIB_PATH}/opencv_videostab490.lib
${LIB_PATH}/opencv_videostab490d.lib
${LIB_PATH}/opencv_wechat_qrcode490.lib
${LIB_PATH}/opencv_wechat_qrcode490d.lib
${LIB_PATH}/opencv_xfeatures2d490.lib
${LIB_PATH}/opencv_xfeatures2d490d.lib
${LIB_PATH}/opencv_ximgproc490.lib
${LIB_PATH}/opencv_ximgproc490d.lib
${LIB_PATH}/opencv_xobjdetect490.lib
${LIB_PATH}/opencv_xobjdetect490d.lib
${LIB_PATH}/opencv_xphoto490.lib
${LIB_PATH}/opencv_xphoto490d.lib
${LIB_PATH}/zlib.lib
${LIB_PATH}/zlibd.lib)

target_compile_options(train PRIVATE /MT)
# Link against OpenCV libraries
target_link_libraries(train PRIVATE
${LIB_PATH}/ade.lib
${LIB_PATH}/aded.lib
${LIB_PATH}/IlmImf.lib
${LIB_PATH}/IlmImfd.lib
${LIB_PATH}/ippicvmt.lib
${LIB_PATH}/ippiw.lib
${LIB_PATH}/ippiwd.lib
${LIB_PATH}/ittnotify.lib
${LIB_PATH}/ittnotifyd.lib
${LIB_PATH}/libjpeg-turbo.lib
${LIB_PATH}/libjpeg-turbod.lib
${LIB_PATH}/libopenjp2.lib
${LIB_PATH}/libopenjp2d.lib
${LIB_PATH}/libpng.lib
${LIB_PATH}/libpngd.lib
${LIB_PATH}/libprotobuf.lib
${LIB_PATH}/libprotobufd.lib
${LIB_PATH}/libtiff.lib
${LIB_PATH}/libtiffd.lib
${LIB_PATH}/libwebp.lib
${LIB_PATH}/libwebpd.lib
${LIB_PATH}/opencv_aruco490.lib
${LIB_PATH}/opencv_aruco490d.lib
${LIB_PATH}/opencv_bgsegm490.lib
${LIB_PATH}/opencv_bgsegm490d.lib
${LIB_PATH}/opencv_bioinspired490.lib
${LIB_PATH}/opencv_bioinspired490d.lib
${LIB_PATH}/opencv_calib3d490.lib
${LIB_PATH}/opencv_calib3d490d.lib
${LIB_PATH}/opencv_ccalib490.lib
${LIB_PATH}/opencv_ccalib490d.lib
${LIB_PATH}/opencv_core490.lib
${LIB_PATH}/opencv_core490d.lib
${LIB_PATH}/opencv_datasets490.lib
${LIB_PATH}/opencv_datasets490d.lib
${LIB_PATH}/opencv_dnn490.lib
${LIB_PATH}/opencv_dnn490d.lib
${LIB_PATH}/opencv_dnn_objdetect490.lib
${LIB_PATH}/opencv_dnn_objdetect490d.lib
${LIB_PATH}/opencv_dnn_superres490.lib
${LIB_PATH}/opencv_dnn_superres490d.lib
${LIB_PATH}/opencv_dpm490.lib
${LIB_PATH}/opencv_dpm490d.lib
${LIB_PATH}/opencv_face490.lib
${LIB_PATH}/opencv_face490d.lib
${LIB_PATH}/opencv_features2d490.lib
${LIB_PATH}/opencv_features2d490d.lib
${LIB_PATH}/opencv_flann490.lib
${LIB_PATH}/opencv_flann490d.lib
${LIB_PATH}/opencv_fuzzy490.lib
${LIB_PATH}/opencv_fuzzy490d.lib
${LIB_PATH}/opencv_gapi490.lib
${LIB_PATH}/opencv_gapi490d.lib
${LIB_PATH}/opencv_hfs490.lib
${LIB_PATH}/opencv_hfs490d.lib
${LIB_PATH}/opencv_highgui490.lib
${LIB_PATH}/opencv_highgui490d.lib
${LIB_PATH}/opencv_imgcodecs490.lib
${LIB_PATH}/opencv_imgcodecs490d.lib
${LIB_PATH}/opencv_imgproc490.lib
${LIB_PATH}/opencv_imgproc490d.lib
${LIB_PATH}/opencv_img_hash490.lib
${LIB_PATH}/opencv_img_hash490d.lib
${LIB_PATH}/opencv_intensity_transform490.lib
${LIB_PATH}/opencv_intensity_transform490d.lib
${LIB_PATH}/opencv_line_descriptor490.lib
${LIB_PATH}/opencv_line_descriptor490d.lib
${LIB_PATH}/opencv_mcc490.lib
${LIB_PATH}/opencv_mcc490d.lib
${LIB_PATH}/opencv_ml490.lib
${LIB_PATH}/opencv_ml490d.lib
${LIB_PATH}/opencv_objdetect490.lib
${LIB_PATH}/opencv_objdetect490d.lib
${LIB_PATH}/opencv_optflow490.lib
${LIB_PATH}/opencv_optflow490d.lib
${LIB_PATH}/opencv_phase_unwrapping490.lib
${LIB_PATH}/opencv_phase_unwrapping490d.lib
${LIB_PATH}/opencv_photo490.lib
${LIB_PATH}/opencv_photo490d.lib
${LIB_PATH}/opencv_plot490.lib
${LIB_PATH}/opencv_plot490d.lib
${LIB_PATH}/opencv_quality490.lib
${LIB_PATH}/opencv_quality490d.lib
${LIB_PATH}/opencv_rapid490.lib
${LIB_PATH}/opencv_rapid490d.lib
${LIB_PATH}/opencv_reg490.lib
${LIB_PATH}/opencv_reg490d.lib
${LIB_PATH}/opencv_rgbd490.lib
${LIB_PATH}/opencv_rgbd490d.lib
${LIB_PATH}/opencv_saliency490.lib
${LIB_PATH}/opencv_saliency490d.lib
${LIB_PATH}/opencv_shape490.lib
${LIB_PATH}/opencv_shape490d.lib
${LIB_PATH}/opencv_signal490.lib
${LIB_PATH}/opencv_signal490d.lib
${LIB_PATH}/opencv_stereo490.lib
${LIB_PATH}/opencv_stereo490d.lib
${LIB_PATH}/opencv_stitching490.lib
${LIB_PATH}/opencv_stitching490d.lib
${LIB_PATH}/opencv_structured_light490.lib
${LIB_PATH}/opencv_structured_light490d.lib
${LIB_PATH}/opencv_superres490.lib
${LIB_PATH}/opencv_superres490d.lib
${LIB_PATH}/opencv_surface_matching490.lib
${LIB_PATH}/opencv_surface_matching490d.lib
${LIB_PATH}/opencv_text490.lib
${LIB_PATH}/opencv_text490d.lib
${LIB_PATH}/opencv_tracking490.lib
${LIB_PATH}/opencv_tracking490d.lib
${LIB_PATH}/opencv_video490.lib
${LIB_PATH}/opencv_video490d.lib
${LIB_PATH}/opencv_videoio490.lib
${LIB_PATH}/opencv_videoio490d.lib
${LIB_PATH}/opencv_videostab490.lib
${LIB_PATH}/opencv_videostab490d.lib
${LIB_PATH}/opencv_wechat_qrcode490.lib
${LIB_PATH}/opencv_wechat_qrcode490d.lib
${LIB_PATH}/opencv_xfeatures2d490.lib
${LIB_PATH}/opencv_xfeatures2d490d.lib
${LIB_PATH}/opencv_ximgproc490.lib
${LIB_PATH}/opencv_ximgproc490d.lib
${LIB_PATH}/opencv_xobjdetect490.lib
${LIB_PATH}/opencv_xobjdetect490d.lib
${LIB_PATH}/opencv_xphoto490.lib
${LIB_PATH}/opencv_xphoto490d.lib
${LIB_PATH}/zlib.lib
${LIB_PATH}/zlibd.lib)